--- a/IoT.WCD.BlockChain.Domain.DomainServices/IoT.WCD.BlockChain.Domain.DomainServices.csproj
+++ b/IoT.WCD.BlockChain.Domain.DomainServices/IoT.WCD.BlockChain.Domain.DomainServices.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{7C788E25-0B1D-4D45-9B4E-1B8170218D37}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>IoT.WCD.BlockChain.Domain.DomainServices</RootNamespace>
     <AssemblyName>IoT.WCD.BlockChain.Domain.DomainServices</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,8 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="IUploadPersonalDataService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UploadPersonalDataService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
