--- a/IoT.WCD.BlockChain.BootStrapper/IoT.WCD.BlockChain.BootStrapper.csproj
+++ b/IoT.WCD.BlockChain.BootStrapper/IoT.WCD.BlockChain.BootStrapper.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{236EA831-1121-443C-B2C7-1085C6BAB3EA}</ProjectGuid>
+    <ProjectGuid>{C10788CA-56B4-42AF-A821-6AE2CC266CE8}</ProjectGuid>
     <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IoT.WCD.BlockChain.BootStrapper</RootNamespace>
     <AssemblyName>IoT.WCD.BlockChain.BootStrapper</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,16 +23,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -47,22 +42,45 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Unity.Container">
+    <Reference Include="Unity.Abstractions, Version=5.11.1.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.5.11.1\lib\net46\Unity.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Container, Version=5.11.1.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
       <HintPath>..\packages\Unity.5.11.1\lib\net46\Unity.Container.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\IoT.WCD.BlockChain.Application.CommandHandlers\IoT.WCD.BlockChain.Application.CommandHandlers.csproj">
+      <Project>{B9F2D3CC-C28A-4ED4-BBFA-DA0CEC8926D7}</Project>
+      <Name>IoT.WCD.BlockChain.Application.CommandHandlers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IoT.WCD.BlockChain.Application.Interfaces\IoT.WCD.BlockChain.Application.Interfaces.csproj">
+      <Project>{B8ADD744-A84A-4662-9FF9-987032EB06C3}</Project>
+      <Name>IoT.WCD.BlockChain.Application.Interfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IoT.WCD.BlockChain.Application.Services\IoT.WCD.BlockChain.Application.Services.csproj">
+      <Project>{0AB0792D-6A18-40B1-8571-2120BFED0653}</Project>
+      <Name>IoT.WCD.BlockChain.Application.Services</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IoT.WCD.BlockChain.Domain.DomainEvents\IoT.WCD.BlockChain.Domain.DomainEvents.csproj">
+      <Project>{3333E4D7-B531-4722-9300-B20CF921AEC5}</Project>
+      <Name>IoT.WCD.BlockChain.Domain.DomainEvents</Name>
+    </ProjectReference>
     <ProjectReference Include="..\IoT.WCD.BlockChain.Infrastructure.IoC.Contracts\IoT.WCD.BlockChain.Infrastructure.IoC.Contracts.csproj">
       <Project>{64EA9BB9-FACE-4FE6-A46A-E50E722299E5}</Project>
       <Name>IoT.WCD.BlockChain.Infrastructure.IoC.Contracts</Name>
     </ProjectReference>
+    <ProjectReference Include="..\IoT.WCD.BlockChain.Messaging\IoT.WCD.BlockChain.Messaging.csproj">
+      <Project>{6A701192-C82C-440D-B1E4-BB7EC60427D8}</Project>
+      <Name>IoT.WCD.BlockChain.Messaging</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
