--- a/IoT.WCD.BlockChain.Infrastructure/IoT.WCD.BlockChain.Infrastructure.csproj
+++ b/IoT.WCD.BlockChain.Infrastructure/IoT.WCD.BlockChain.Infrastructure.csproj
@@ -56,6 +56,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\GenderType.cs" />
+    <Compile Include="Exceptions\UnregisteredDomainCommandException.cs" />
     <Compile Include="PersonalDataDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubmitResult.cs" />
