Add memento, in process.

--- a/IoT.WCD.BlockChain.Domain/IoT.WCD.BlockChain.Domain.csproj
+++ b/IoT.WCD.BlockChain.Domain/IoT.WCD.BlockChain.Domain.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="AggregateRoot.cs" />
     <Compile Include="ApplyAggregateRoot.cs" />
+    <Compile Include="Entity\ECGData.cs" />
     <Compile Include="Entity\UploadedPersonalData.cs" />
     <Compile Include="Entity\User.cs" />
     <Compile Include="IAggregateRoot.cs" />
