--- a/IoT.WCD.BlockChain.Domain.DomainEvents/IoT.WCD.BlockChain.Domain.DomainEvents.csproj
+++ b/IoT.WCD.BlockChain.Domain.DomainEvents/IoT.WCD.BlockChain.Domain.DomainEvents.csproj
@@ -57,8 +57,11 @@
   <ItemGroup>
     <Compile Include="EventBus.cs" />
     <Compile Include="EventHandlers\PersonalDataUploadEventHandler.cs" />
+    <Compile Include="Events\ECGDataCreatedEvent.cs" />
+    <Compile Include="Events\Event.cs" />
+    <Compile Include="Events\IEvent.cs" />
+    <Compile Include="Events\IHandle.cs" />
     <Compile Include="Events\PersonalDataUploadEvent.cs" />
-    <Compile Include="IEvent.cs" />
     <Compile Include="IEventBus.cs" />
     <Compile Include="IEventHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
