--- a/IoT.WCD.BlockChain.Test.Application/packages.config
+++ b/IoT.WCD.BlockChain.Test.Application/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net46" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net46" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net46" />
+  <package id="Unity" version="5.11.1" targetFramework="net46" />
 </packages>
