--- a/IoT.WCD.BlockChain.Infrastructure/IoT.WCD.BlockChain.Infrastructure.csproj
+++ b/IoT.WCD.BlockChain.Infrastructure/IoT.WCD.BlockChain.Infrastructure.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubmitResult.cs" />
     <Compile Include="UnitOfWork.cs" />
+    <Compile Include="Utilities\Converter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
