--- a/IoT.WCD.BlockChain.Domain/packages.config
+++ b/IoT.WCD.BlockChain.Domain/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="StructureMap" version="4.7.1" targetFramework="net46" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net46" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net46" />
   <package id="Unity" version="5.11.1" targetFramework="net46" />
 </packages>
