--- a/IoT.WCD.BlockChain.Test.Application/IoT.WCD.BlockChain.Test.Application.csproj
+++ b/IoT.WCD.BlockChain.Test.Application/IoT.WCD.BlockChain.Test.Application.csproj
@@ -77,6 +77,10 @@
       <Project>{C10788CA-56B4-42AF-A821-6AE2CC266CE8}</Project>
       <Name>IoT.WCD.BlockChain.BootStrapper</Name>
     </ProjectReference>
+    <ProjectReference Include="..\IoT.WCD.BlockChain.Domain\IoT.WCD.BlockChain.Domain.csproj">
+      <Project>{49F8EFEC-84FB-484D-AE32-662B477D3638}</Project>
+      <Name>IoT.WCD.BlockChain.Domain</Name>
+    </ProjectReference>
     <ProjectReference Include="..\IoT.WCD.BlockChain.Infrastructure.IoC.Contracts\IoT.WCD.BlockChain.Infrastructure.IoC.Contracts.csproj">
       <Project>{64EA9BB9-FACE-4FE6-A46A-E50E722299E5}</Project>
       <Name>IoT.WCD.BlockChain.Infrastructure.IoC.Contracts</Name>
