--- a/IoT.WCD.BlockChain.Test.Application/IoT.WCD.BlockChain.Test.Application.csproj
+++ b/IoT.WCD.BlockChain.Test.Application/IoT.WCD.BlockChain.Test.Application.csproj
@@ -58,7 +58,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest.cs" />
+    <Compile Include="ECGDataTest.cs" />
+    <Compile Include="UserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
