--- a/IoT.WCD.BlockChain.Domain/IoT.WCD.BlockChain.Domain.csproj
+++ b/IoT.WCD.BlockChain.Domain/IoT.WCD.BlockChain.Domain.csproj
@@ -59,14 +59,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AggregateRoot.cs" />
+    <Compile Include="DomainEvents\EventHandlers\AuthDataCreatedEventHandler.cs" />
+    <Compile Include="DomainEvents\EventHandlers\ECGDataCreatedEventHandler.cs" />
     <Compile Include="DomainEvents\EventHandlers\EventHandlerFactory.cs" />
     <Compile Include="DomainEvents\EventHandlers\UserCreatedEventHandler.cs" />
+    <Compile Include="DomainEvents\Events\AuthDataCreatedEvent.cs" />
     <Compile Include="DomainEvents\Events\ECGDataCreatedEvent.cs" />
     <Compile Include="DomainEvents\Events\Event.cs" />
     <Compile Include="DomainEvents\Events\IHandle.cs" />
     <Compile Include="DomainEvents\Events\UserCreatedEvent.cs" />
+    <Compile Include="DomainServices\AuthDataService.cs" />
+    <Compile Include="DomainServices\ECGDataService.cs" />
+    <Compile Include="DomainServices\IAuthDataService.cs" />
+    <Compile Include="DomainServices\IDomainService.cs" />
+    <Compile Include="DomainServices\IECGDataService.cs" />
     <Compile Include="DomainServices\IUserService.cs" />
     <Compile Include="DomainServices\UserService.cs" />
+    <Compile Include="Entity\AuthorizationData.cs" />
     <Compile Include="Entity\ECGData.cs" />
     <Compile Include="Entity\UploadedPersonalData.cs" />
     <Compile Include="Entity\User.cs" />
@@ -78,14 +87,26 @@
     <Compile Include="DomainEvents\EventHandlers\IEventHandler.cs" />
     <Compile Include="DomainEvents\EventHandlers\IEventHandlerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queries\AuthDataDatabase.cs" />
+    <Compile Include="Queries\AuthDataDto.cs" />
+    <Compile Include="Queries\ECGDataDatabase.cs" />
+    <Compile Include="Queries\ECGDataDto.cs" />
+    <Compile Include="Queries\IAuthDataDatabase.cs" />
+    <Compile Include="Queries\IECGDataDatabase.cs" />
     <Compile Include="Queries\IReadOnlyDatabase.cs" />
     <Compile Include="Queries\IUserDatabase.cs" />
     <Compile Include="Queries\UserDatabase.cs" />
     <Compile Include="Queries\UserDto.cs" />
     <Compile Include="Repositories\BaseRepository.cs" />
+    <Compile Include="Repositories\Mementos\AuthDataMemento.cs" />
+    <Compile Include="Repositories\Mementos\ECGDataMemento.cs" />
     <Compile Include="Repositories\Mementos\IOriginator.cs" />
     <Compile Include="Repositories\Mementos\Memento.cs" />
     <Compile Include="Repositories\Mementos\UserMemento.cs" />
+    <Compile Include="Repositories\Repositories\AuthDataRepository.cs" />
+    <Compile Include="Repositories\Repositories\ECGDataRepoistory.cs" />
+    <Compile Include="Repositories\Repositories\Interfaces\IAuthDataRepository.cs" />
+    <Compile Include="Repositories\Repositories\Interfaces\IECGDataRepository.cs" />
     <Compile Include="Repositories\Repositories\Interfaces\IRepository.cs" />
     <Compile Include="Repositories\Repositories\Interfaces\IUserRepository.cs" />
     <Compile Include="Repositories\Repositories\UserRepository.cs" />
