--- a/IoT.WCD.BlockChain.Test/IoT.WCD.BlockChain.Test.csproj
+++ b/IoT.WCD.BlockChain.Test/IoT.WCD.BlockChain.Test.csproj
@@ -56,9 +56,17 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\IoT.WCD.BlockChain.Entities\IoT.WCD.BlockChain.Entities.csproj">
-      <Project>{AF9D679C-DA6F-4D12-A72E-82D3B668C2E8}</Project>
-      <Name>IoT.WCD.BlockChain.Entities</Name>
+    <ProjectReference Include="..\IoT.WCD.BlockChain.Domain\IoT.WCD.BlockChain.Domain.csproj">
+      <Project>{49F8EFEC-84FB-484D-AE32-662B477D3638}</Project>
+      <Name>IoT.WCD.BlockChain.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IoT.WCD.BlockChain.Infrastructure\IoT.WCD.BlockChain.Infrastructure.csproj">
+      <Project>{B99FEAA5-60A6-4F66-B75D-474F64E4A20D}</Project>
+      <Name>IoT.WCD.BlockChain.Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IoT.WCD.BlockChain.ValueObjects\IoT.WCD.BlockChain.ValueObjects.csproj">
+      <Project>{BEC264AA-4586-4C6A-9C00-BD2CBDECD99D}</Project>
+      <Name>IoT.WCD.BlockChain.ValueObjects</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
