Remove redundant proxy.

--- a/IoT.WCD.BlockChain.Domain/IoT.WCD.BlockChain.Domain.csproj
+++ b/IoT.WCD.BlockChain.Domain/IoT.WCD.BlockChain.Domain.csproj
@@ -93,13 +93,12 @@
     <Compile Include="Queries\AuthDataDatabase.cs" />
     <Compile Include="Queries\AuthDataDto.cs" />
     <Compile Include="Queries\ECGDataDatabase.cs" />
-    <Compile Include="Queries\ECGDataDatabaseProxy.cs" />
     <Compile Include="Queries\ECGDataDto.cs" />
     <Compile Include="Queries\IAuthDataDatabase.cs" />
     <Compile Include="Queries\IECGDataDatabase.cs" />
-    <Compile Include="Queries\IECGDataDatabaseProxy.cs" />
     <Compile Include="Queries\IReadOnlyDatabase.cs" />
     <Compile Include="Queries\IUserDatabase.cs" />
+    <Compile Include="Queries\PackagedECGDataResult.cs" />
     <Compile Include="Queries\UserDatabase.cs" />
     <Compile Include="Queries\UserDto.cs" />
     <Compile Include="Repositories\BaseRepository.cs" />
