--- a/IoT.WCD.BlockChain.Infrastructure/IoT.WCD.BlockChain.Infrastructure.csproj
+++ b/IoT.WCD.BlockChain.Infrastructure/IoT.WCD.BlockChain.Infrastructure.csproj
@@ -58,12 +58,14 @@
   <ItemGroup>
     <Compile Include="Enums\AuthorizationType.cs" />
     <Compile Include="Enums\GenderType.cs" />
+    <Compile Include="Exceptions\InvalidAccessException.cs" />
     <Compile Include="Exceptions\UnregisteredDomainCommandException.cs" />
     <Compile Include="PersonalDataDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubmitResult.cs" />
     <Compile Include="UnitOfWork.cs" />
     <Compile Include="Utilities\Converter.cs" />
+    <Compile Include="Utilities\StringUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
