Add auth logic for third party service.

--- a/IoT.WCD.BlockChain.Application.CommandHandlers/IoT.WCD.BlockChain.Application.CommandHandlers.csproj
+++ b/IoT.WCD.BlockChain.Application.CommandHandlers/IoT.WCD.BlockChain.Application.CommandHandlers.csproj
@@ -50,6 +50,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChangeUserActiveTimeCommandHandler.cs" />
     <Compile Include="CommandHandlerFactory.cs" />
     <Compile Include="CreateAuthDataCommandHandler.cs" />
     <Compile Include="CreateUserCommandHandler.cs" />
